# PicoTrace

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md
.github/: copilot-instructions.md
.github/skills/picotrace-benchmarking/: SKILL.md
.github/skills/picotrace-benchmarking/references/: benchmark-reference.md
.github/skills/picotrace-i2c-trace-testing/: SKILL.md
.github/workflows/: pr-tests.yml  release-firmware.yml
docs/: README.md  hardware-connections.md  raspberry-pi-test-setup.md  rp2040-benchmark.md  streaming-design.md
docs/architecture/: README.md  firmware-architecture.md  interface-and-synchronization.md
docs/details/: i2c-pio-sampler-design.md  spi-pio-monitor-design.md  trace-ring-buffer-design.md  usb-multi-interface-design.md
docs/testlog/: rp2040-benchmark-baseline.md  rp2040-benchmark-testlog-template.md  rp2040-benchmark-testlog.md
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/src/: app_control.c  app_control.h  device_control.c  device_control.h  main.c  usb_stream.c  usb_stream.h
firmware/src/cli/: cli_shell.c  cli_shell.h  device_cli.c  device_cli.h
firmware/src/config/: i2c_monitor_config.h  ring_config.h  spi_monitor_config.h  tusb_config.h
firmware/src/driver/: led.c  led.h  system.c  system.h
firmware/src/trace/: trace_packet.h  trace_ring.c  trace_ring.h  trace_ring_atomic.h
firmware/src/trace/capture/: i2c_monitor.c  i2c_monitor.h  i2c_monitor_control.c  i2c_monitor_control.h  spi_monitor.c  spi_monitor.h  spi_monitor.pio  spi_monitor_control.c  spi_monitor_control.h
firmware/src/trace/capture/i2c/: i2c_monitor.c  i2c_monitor.h  i2c_monitor.pio  i2c_monitor_control.c  i2c_monitor_control.h
firmware/src/trace/capture/spi/: spi_monitor.c  spi_monitor.h  spi_monitor.pio  spi_monitor_control.c  spi_monitor_control.h
firmware/src/trace/decode/: i2c_decoder.c  i2c_decoder.h  i2c_trace_packet.c  i2c_trace_packet.h
firmware/src/trace/decode/i2c/: i2c_decoder.c  i2c_decoder.h  i2c_trace_packet.c  i2c_trace_packet.h
firmware/src/trace/i2c/: i2c_decoder.c  i2c_decoder.h  i2c_monitor.c  i2c_monitor.h  i2c_monitor_control.c  i2c_monitor_control.h  i2c_trace_packet.c  i2c_trace_packet.h
firmware/src/trace/spi/: spi_monitor.c  spi_monitor_control.c  spi_monitor_control.h
firmware/src/usb/: usb_bulk.c  usb_bulk.h  usb_cdc.c  usb_cdc.h  usb_descriptors.c  usb_hid.c  usb_hid.h
firmware/tests/: CMakeLists.txt  app_control_test.c  i2c_monitor_runtime_test.c  i2c_monitor_test_bridge.c  spi_monitor_test_hooks.c  spi_monitor_test_hooks.h  test_support.h  usb_app_test.c
firmware/tests/hardware/: clocks.h
firmware/tests/integration/: app_control_test.c  app_control_test.h  i2c_monitor_runtime_test.c  i2c_monitor_test_bridge.c  i2c_monitor_test_hooks.h  spi_monitor_test_hooks.c  spi_monitor_test_hooks.h  tusb.h  usb_app_test.c
firmware/tests/integration/stubs/: i2c_monitor.pio.h  spi_monitor.pio.h
firmware/tests/integration/stubs/hardware/: gpio.h  sync.h
firmware/tests/integration/trace/decode/: i2c_decoder_test.c  i2c_decoder_test.h  i2c_trace_packet_test.c
firmware/tests/stubs/: spi_monitor.pio.h
firmware/tests/stubs/hardware/: clocks.h  dma.h  gpio.h  irq.h  pio.h  watchdog.h
firmware/tests/stubs/pico/: time.h
firmware/tests/trace/: trace_ring_atomic.h
firmware/tests/trace/decode/: i2c_decoder_test.c  i2c_trace_packet_test.c
firmware/tests/trace/i2c/: i2c_decoder_test.c  i2c_trace_packet_test.c  i2c_trace_packet_test.h
host/: README.md
host/dotnet/: PicoTrace.sln  README.md
host/dotnet/PicoTrace/: PicoTrace.csproj  Program.cs
host/dotnet/PicoTrace.Tests/: ControlOperationsTests.cs  HidProtocolTests.cs  PicoTrace.Tests.csproj  ProgramParsingTests.cs  README.md  TraceDecoderTests.cs
host/dotnet/PicoTrace/App/: ControlOperations.cs  TraceStreaming.cs
host/dotnet/PicoTrace/Control/: HidControlClient.cs  HidProtocol.cs
host/dotnet/PicoTrace/Properties/: AssemblyInfo.cs
host/dotnet/PicoTrace/Trace/: TraceChannelRegistry.cs  TraceDecoder.cs  TraceModels.cs  UsbBulkTraceTransport.cs
host/dotnet/docs/details/: README.md  app-design.md  control-design.md  trace-design.md
host/python/: README.md  pyproject.toml
host/python/docs/: README.md
host/python/docs/details/: README.md  app-design.md  control-design.md  trace-design.md
host/python/src/picotrace/: __init__.py  capture.py
host/python/src/picotrace/app/: __init__.py  cli.py  control_ops.py  trace_stream.py
host/python/src/picotrace/control/: __init__.py  hid.py  protocol.py
host/python/src/picotrace/trace/: __init__.py  decode.py  filter.py  usb_bulk.py
host/python/tests/app/: test_cli.py  test_control_ops.py  test_trace_stream.py
host/python/tests/control/: test_hid.py  test_protocol.py
host/python/tests/trace/: test_decode.py  test_filter.py  test_transport.py
tools/linux/: build.sh  common.sh  coverage.sh  host_python_venv.sh  i2c_trace_test.py  load.sh  setup_env.sh  spi_trace_benchmark.py  spi_transfer.py  test.sh
tools/windows/: build.ps1  common.ps1  coverage.ps1  host_python_venv.ps1  load.ps1  setup_env.ps1  test.ps1
