[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "picotrace"
version = "0.1.0"
description = "Minimal Python host helpers for PicoTrace RP2040/RP2350 USB capture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyusb>=1.2.1",
]

[project.scripts]
picotrace = "picotrace.app:main"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]